syntax = "proto3";

package exercise;

message helloRequest {
    uint64 timestamp = 1;
    string name = 2;
    int32 randInt = 3;
}

message helloResponse {
    string message = 1;
}

service FirstService {
    rpc ReturnTimestamp(helloRequest) returns (helloResponse);
    rpc Greet(helloRequest) returns (helloResponse);
    rpc MinusTen(helloRequest) returns (helloResponse);
}